--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "0_39_yelpcamp",
+  "name": "yelp-camp",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
